code/java/InvestmentResearch/v0/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Investment Research client library for Java

[![API Version](https://img.shields.io/badge/api-v0.0.0-blue)](https://developer.factset.com/api-catalog/investment-research-api)
[![Maven Central](https://img.shields.io/maven-central/v/com.factset.sdk/investmentresearch/0.1.3)](https://central.sonatype.com/artifact/com.factset.sdk/investmentresearch/0.1.3)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)


The Investment Research API provides a comprehensive set of functionalities for searching and retrieving research reports and documents from various contributors.

This API is designed to expose document search and document retrieval functionality. A document search will allow a request to query FactSet document databases based on certain search criteria specified in the request.

FactSet collects research reports and models from brokers, independent research providers, market research firms, rating agencies, and other publishers of research. These documents are processed and made available to clients within about two minutes of receipt.

FactSet delivers this content through two main products:

**FactSet Research Connect** – real-time research for investment managers entitled by the contributors to access the content.

**FactSet Aftermarket Research** – delayed research for investment bankers permitted by contributors to purchase the research.

The meta endpoints namely time-zones, categories, research-contributors, research-analysts, security-types and asset-types provide comprehensive lists of data that is used in the research endpoints.

  

This Java package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 0.0.0
- SDK version: 0.1.3
- Build package: org.openapitools.codegen.languages.JavaClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Java JDK >= 1.8

## Installation

### Maven

Add these dependencies to your project's POM:

```xml
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>utils</artifactId>
  <version>1.1.0</version>
</dependency>
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>investmentresearch</artifactId>
  <version>0.1.3</version>
  <scope>compile</scope>
</dependency>
```

### Gradle

Add these dependencies to your project's build file:

```groovy
  repositories {
    mavenCentral()
  }

  dependencies {
    implementation "com.factset.sdk:utils:1.1.0"
    implementation "com.factset.sdk:investmentresearch:0.1.3"
  }
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Java environment.
   1. Install and activate Java 1.8+
   2. Install [maven](https://maven.apache.org/install.html) or [gradle](https://gradle.org/install/)
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```java
import com.factset.sdk.InvestmentResearch.*;
import com.factset.sdk.InvestmentResearch.auth.*;
import com.factset.sdk.InvestmentResearch.models.*;
import com.factset.sdk.InvestmentResearch.api.MetaApi;

import com.factset.sdk.utils.authentication.ConfidentialClient;


public class MetaApiExample {

    public static void main(String[] args) throws Exception {
        // Examples for each supported authentication method are below,
        // choose one that satisfies your use case.

        /* (Preferred) OAuth 2.0: FactSetOAuth2 */
        // See https://github.com/FactSet/enterprise-sdk#oauth-20
        // for information on how to create the app-config.json file
        //
        // The confidential client instance should be reused in production environments.
        // See https://github.com/FactSet/enterprise-sdk-utils-java#authentication
        // for more information on using the ConfidentialClient class
        ConfidentialClient confidentialClient = new ConfidentialClient("./path/to/config.json");
        ApiClient defaultClient = new ApiClient()
          .setFactSetOAuth2Client(confidentialClient);

        /* Basic authentication: FactSetApiKey */
        // See https://github.com/FactSet/enterprise-sdk#api-key
        // ApiClient defaultClient = new ApiClient()
        //   .setUsername("YOUR USERNAME")
        //   .setPassword("YOUR PASSWORD");

        MetaApi apiInstance = new MetaApi(defaultClient);
        try {
            AssetTypesResponse result = apiInstance.getAssetTypes();
            System.out.println(result);
        } catch (ApiException e) {
            System.err.println("Exception when calling MetaApi#getAssetTypes");
            System.err.println("Status code: " + e.getCode());
            System.err.println("Reason: " + e.getResponseBody());
            System.err.println("Response headers: " + e.getResponseHeaders());
            e.printStackTrace();
        }
    }
}

```

### Using a Proxy

To add a HTTP proxy for the API client, use `ClientConfig`:
```java

import org.glassfish.jersey.apache.connector.ApacheConnectorProvider;
import org.glassfish.jersey.client.ClientConfig;
import org.glassfish.jersey.client.ClientProperties;
import com.factset.sdk.InvestmentResearch.*;
import com.factset.sdk.InvestmentResearch.api.MetaApi;

...

ApiClient defaultClient = Configuration.getDefaultApiClient();
ClientConfig clientConfig = defaultClient.getClientConfig();
clientConfig.connectorProvider(new ApacheConnectorProvider());
clientConfig.property(ClientProperties.PROXY_URI, "http://proxy_url_here");
clientConfig.property(ClientProperties.PROXY_USERNAME, "proxy_username");
clientConfig.property(ClientProperties.PROXY_PASSWORD, "proxy_password");
defaultClient.setClientConfig(clientConfig);

MetaApi apiInstance = new MetaApi(defaultClient);

```

### Debugging
The SDK uses the standard library class [`java.util.logging.Logger`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Logger.html).

Calling `setDebugging(true)` on an instance of the `ApiClient` will return an instance of the `ApiClient` that has set the logger's [`Level`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Level.html) to `ALL`.

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```java
import com.factset.sdk.InvestmentResearch.ApiClient;

public class Main {
    public static void main(String[] args) throws Exception {
        ApiClient defaultClient = new ApiClient();
        defaultClient.setDebugging(true);

        // Setup authentication and make request with apiInstance...
    }
}
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/content/investment-research/v0*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*MetaApi* | [**getAssetTypes**](docs/MetaApi.md#getAssetTypes) | **GET** /meta/asset-types | Returns the codes indicating asset types.
*MetaApi* | [**getCategories**](docs/MetaApi.md#getCategories) | **GET** /meta/categories | Returns the categories.
*MetaApi* | [**getResearchAnalyst**](docs/MetaApi.md#getResearchAnalyst) | **GET** /meta/research-analysts | Returns the research analysts&#39; details.
*MetaApi* | [**getResearchContributor**](docs/MetaApi.md#getResearchContributor) | **GET** /meta/research-contributors | Returns the research contributors&#39; details.
*MetaApi* | [**getSecurityTypes**](docs/MetaApi.md#getSecurityTypes) | **GET** /meta/security-types | Returns the codes indicating security types.
*MetaApi* | [**getTimezones**](docs/MetaApi.md#getTimezones) | **GET** /meta/time-zones | Returns the time zones.
*ResearchApi* | [**getCount**](docs/ResearchApi.md#getCount) | **POST** /count | Returns the count of documents for specified source.
*ResearchApi* | [**getInvestmentResearchData**](docs/ResearchApi.md#getInvestmentResearchData) | **POST** /search | Retrieve investment research documents and related metadata within FactSet coverage.


## Documentation for Models

 - [AssetResponse](docs/AssetResponse.md)
 - [AssetTypesResponse](docs/AssetTypesResponse.md)
 - [CategoriesResponse](docs/CategoriesResponse.md)
 - [CategoriesResponseObject](docs/CategoriesResponseObject.md)
 - [CountRequest](docs/CountRequest.md)
 - [CountRequestBody](docs/CountRequestBody.md)
 - [CountResponse](docs/CountResponse.md)
 - [CountResponseObject](docs/CountResponseObject.md)
 - [Document](docs/Document.md)
 - [ErrorExample](docs/ErrorExample.md)
 - [ErrorResponse](docs/ErrorResponse.md)
 - [InvalidIdErrorObject](docs/InvalidIdErrorObject.md)
 - [InvestmentResearchResponse](docs/InvestmentResearchResponse.md)
 - [InvestmentResearchResponseItems](docs/InvestmentResearchResponseItems.md)
 - [InvestmentResearchResponseMeta](docs/InvestmentResearchResponseMeta.md)
 - [InvestmentResearchResponseMetaPagination](docs/InvestmentResearchResponseMetaPagination.md)
 - [ResearchAnalystResponse](docs/ResearchAnalystResponse.md)
 - [ResearchAnalystResponseObject](docs/ResearchAnalystResponseObject.md)
 - [ResearchContributorResponse](docs/ResearchContributorResponse.md)
 - [ResearchContributorResponseObject](docs/ResearchContributorResponseObject.md)
 - [SearchRequest](docs/SearchRequest.md)
 - [SearchRequestBody](docs/SearchRequestBody.md)
 - [SearchRequestMeta](docs/SearchRequestMeta.md)
 - [SearchRequestMetaPagination](docs/SearchRequestMetaPagination.md)
 - [SecurityResponse](docs/SecurityResponse.md)
 - [SecurityTypesResponse](docs/SecurityTypesResponse.md)
 - [TimeZoneResponse](docs/TimeZoneResponse.md)
 - [TimeZonesResponse](docs/TimeZonesResponse.md)


## Documentation for Authorization

Authentication schemes defined for the API:
### FactSetApiKey


- **Type**: HTTP basic authentication

### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multi-threaded environment to avoid any potential issues.

# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
